--- a/Client/Website/src/app/pages/admin/language-database/language-database.component.html
+++ b/Client/Website/src/app/pages/admin/language-database/language-database.component.html
@@ -1,2 +1,2 @@
 <app-nav-bar></app-nav-bar>
-<app-database [data_injection]="data_injection" [change_injection]="change_injection" [extra_injection]="extra_injection"></app-database>
+<app-database [data_injection]="data_injection" [change_injection]="change_injection" [extra_change_injection]="extra_change_injection" [extra_injection]="extra_injection"></app-database>
