--- a/Client/Website/src/app/pages/guest/rooms/overview/room-overview.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/overview/room-overview.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <app-nav-bar></app-nav-bar>
-    <app-room-details [overview]="false" [room]="room" [room_type]="room_type"
+    <app-room-details [promo]="promo_code" [overview]="false" [room]="room" [room_type]="room_type"
         style="margin-bottom: 64px;"></app-room-details>
 
     <mat-divider
