Worked on the Room Item Component📱
1. Design, Implement Rooms Page
2. 10
3. Worked on the room item component.

--- a/Client/Application/src/app/components/room/room-item/room-item.component.html
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.html
@@ -57,20 +57,12 @@
         <tr>
           <td colspan="2">
             <h2 class="img-title">{{room?.value?.label}}</h2>
-            <img class="main-img" src="../../../assets/rooms/room-sample.jpg">
+            <div class="image-bg">
+            <img src="../../../assets/rooms/room-sample.jpg">
+            </div>
           </td>
   
         </tr>
-  
-        <!-- <tr>
-          <td>
-            <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
-          </td>
-  
-          <td>
-            <img class="sub-imgs" src="../../../assets/services-pics/movie-night.png">
-          </td>
-        </tr> -->
   
   
       </table>
