--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -34,6 +34,8 @@
                             </td>
                         </tr>
                     </ng-container>
+
+                    <!-- Tables -->
                     <ng-container *ngIf="side_panel == 'table' && table">
 
 
@@ -60,6 +62,28 @@
                                             {{'valid_number' | translate}} </div>
                                         <!-- </mat-form-field> -->
 
+                                    </td>
+
+                                </ng-container>
+                            </ng-container>
+
+                            <ng-container *ngFor="let col of table.columns">
+
+                                <ng-container *ngIf="!col || col.type === 'boolean'"
+                                    [matColumnDef]="col.key">
+                                    <th mat-header-cell *matHeaderCellDef>
+                                        {{col.header_alt || formatWord(col.key)}}
+                                    </th>
+
+                                    <td class="cell" mat-cell *matCellDef="let element">
+                                        <!-- <mat-form-field class="full-width input"> -->
+                                        <mat-checkbox [disabled]="!modification_rule(this.data)"
+                                            class="input"
+                                            [ngModel]="formatTableData(element, col.key)"
+                                            (ngModelChange)="updateData(col.key, element, $event)"
+                                            matInput>
+                                        </mat-checkbox>
+                                        
                                     </td>
 
                                 </ng-container>
@@ -179,8 +203,9 @@
                     <tr *ngFor="let field of fields; let i = index">
                         <td *ngFor="let x of iterator">
 
-                            <app-completion [uniqueness]="uniqueness" *ngIf="fields[x + i * size]" [outer_data]="outer_data"
-                                [data]="data" [field]="fields[x + i * size]" [fields]="fields"
+                            <app-completion [uniqueness]="uniqueness" *ngIf="fields[x + i * size]"
+                                [outer_data]="outer_data" [data]="data"
+                                [field]="fields[x + i * size]" [fields]="fields"
                                 [linked_data]="linked_data">
                             </app-completion>
                         </td>
