Handled system informations🔧
1. N/A
2. 10
3. Handled all system informations

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -54,6 +54,11 @@
             <button [routerLink]="['/admin/stock-database']" class="check-btn">{{"Stock Database" |
                 translate}}</button>
         </div>
+        <div class="col-md-3">
+            <button [routerLink]="['/admin/information-database']" class="check-btn">{{"Information
+                Database" |
+                translate}}</button>
+        </div>
     </div>
 
 
