--- a/Client/Website/src/app/components/general/footer/footer.component.html
+++ b/Client/Website/src/app/components/general/footer/footer.component.html
@@ -9,31 +9,43 @@
                 <td>
                     <div>
 
-                        <p [style.color]="font_color" class="content-2">{{ "website_name" | translate }}</p>
-                        <p [style.color]="font_color" class="content-1">{{ "powered_by" | translate}} {{"team_name" | translate
-                            }}<br>{{ "mascot" | translate}}</p>
+                        <p [style.color]="font_color" class="content-2">{{ getTerm('website_name')
+                            }}</p>
+                        <p [style.color]="font_color" class="content-1">{{ "powered_by" |
+                            translate}} {{ getTerm("team_name") }}<br>{{ getTerm("mascot_name")}}
+                        </p>
                     </div>
                 </td>
                 <td>
                     <div>
-                        <p [style.color]="font_color" class="content-1">{{ "about_us" | translate}}</p>
-                        <p [style.color]="font_color" class="content-1">{{ "terms_conditions" | translate}}</p>
+                        <p (click)="display_dialog.openDialog('about_us', 'about_us')"
+                            [style.color]="font_color" class="content-1">{{ "about_us" | translate}}
+                        </p>
+                        <p (click)="display_dialog.openDialog('terms', 'terms_conditions')"
+                            [style.color]="font_color" class="content-1">{{ "terms_conditions" |
+                            translate}}</p>
                     </div>
                 </td>
                 <td>
                     <img src="../../../assets/facebook-icon.png" width="10px">
-                    <p [style.color]="font_color" style="margin-left: 22px;" class="content-3"><b> Facebook</b></p><br>
+                    <a [href]="getTerm('facebook')" [style.color]="font_color"
+                        style="margin-left: 22px;" class="content-3"><b> Facebook</b></a><br>
                     <img src="../../../assets/twitter-icon.png" width="16px">
-                    <p [style.color]="font_color" style="margin-left: 16px;" class="content-3"><b> Twitter</b></p><br>
+                    <a [href]="getTerm('twitter')" [style.color]="font_color"
+                        style="margin-left: 16px;" class="content-3"><b> Twitter</b></a><br>
                     <img src="../../../assets/instagram-icon.png" width="16px">
-                    <p [style.color]="font_color" style="margin-left: 16px;" class="content-3"><b> Instagram</b></p>
+                    <a [href]="getTerm('instagram')" [style.color]="font_color"
+                        style="margin-left: 16px;" class="content-3"><b> Instagram</b></a>
                 </td>
                 <td>
-                    <p [style.color]="font_color" class="content-3"><b>{{ "subscribe" | translate }}</b></p><br>
+                    <p [style.color]="font_color" class="content-3"><b>{{ "subscribe" | translate
+                            }}</b></p><br>
                     <br>
                     <div [style.backgroundColor]="alt_color" class="email-module">
                         <div class="email-input">
-                            <b><input [style.borderColor]="alt_color" [style.backgroundColor]="main_color" class="content-5" placeholder="Email Address"></b>
+                            <b><input [style.borderColor]="alt_color"
+                                    [style.backgroundColor]="main_color" class="content-5"
+                                    placeholder="Email Address"></b>
                         </div>
                         <p [style.color]="main_color" class="content-4">
                             <b>{{ "ok" | translate }}</b>
