--- a/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
+++ b/Client/Website/src/app/pages/guest/restaurant/landing/landing-restaurant.component.html
@@ -17,7 +17,7 @@
 
 <div class="restaurant-container">
     <img src="../../../../../assets/chefs-background.jpg" width="100%">
-    <button (click)="chef_dialog.openDialog()" class="chefs-button">{{"chefs" | translate}}</button>
+    <button (click)="display_dialog.openDialog('chef_list', 'chefs')" class="chefs-button">{{"chefs" | translate}}</button>
 </div>
 
 <h1 class="restaurant-title">{{"menu" | translate}}</h1>
@@ -30,3 +30,5 @@
     <button [routerLink]="['/restaurant/menu']" class="menu-button">{{"view_menu" | translate}}</button>
     <button class="feedback-button">{{"feedback" | translate}}</button>
 </div>
+
+<app-footer main_color="#14274A" font_color="white"></app-footer>
