Tweaked some Changes in Rooms Page📱
1. Design, Implement Rooms Page
2. 10
3. Tweaked some changes.

--- a/Client/Application/src/app/components/room/room-item/room-item.component.scss
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.scss
@@ -97,7 +97,7 @@
 }
 
 .image-bg {
-    background-color: $primary-color;
+    background-color: #14274a;
     block-size: fit-content;
     height: fit-content;
     margin-top: 12%;
