--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.html
@@ -2,17 +2,25 @@
   
   <div class="main">
     <p class="title">
-      {{'This is it.' | translate}}
+      <!-- {{'This is it.' | translate}} -->
     </p>
   </div>
 
   <h1 class="rooms-header">Rooms and rates</h1>
 
-  <div>
+  <!-- <div>
 
     <div *ngFor="let room of filtered_rooms">
       <app-room-item [change]="getEffect(room[0], room[1].type)" class="item"
       [room]="{key: room[0], value: room[1]}"
+      [room_type]="room_types.getPair(room[1].type)"></app-room-item>
+  </div>
+  </div> -->
+
+  <div>
+    <!-- the news component will go here -->
+    <div *ngFor="let room of filtered_rooms">
+      <app-room-item [room]="{key: room[0], value: room[1]}"
       [room_type]="room_types.getPair(room[1].type)"></app-room-item>
   </div>
   </div>
