--- a/Client/Application/src/app/components/room/room-modal/room-modal.component.html
+++ b/Client/Application/src/app/components/room/room-modal/room-modal.component.html
@@ -14,16 +14,16 @@
         </td>
         <td style="padding: 16px; width: 40%;" *ngIf="room && room_type">
             <div style="display: flex;">
-                <star-rating [showHalfStars]="true" [rating]="room.value.rating || 0"
-                    [readOnly]="true" staticColor="positive"></star-rating>
+                <!-- <star-rating [showHalfStars]="true" [rating]="room.value.rating || 0"
+                    [readOnly]="true" staticColor="positive"></star-rating> -->
             </div>
             <br>
             <div style="vertical-align: middle;">
                 <p class="title-1">Description</p>
-                <mat-divider style="border-top-color: white"></mat-divider>
+                <!-- <mat-divider style="border-top-color: white"></mat-divider> -->
                 <br>
                 <p class="content-2">
-                    {{room.value.description}}
+                    {{room?.value?.description}}
                 </p>
                 <br>
                 <p class="content-1">
@@ -44,12 +44,12 @@
                             </p>
                         </td>
                         <td>
-                            <app-calendar (result)="addBooking($event)"
+                            <!-- <app-calendar (result)="addBooking($event)"
                                 style="position: relative; top: 36px" [invisible_input]="true"
                                 #calendar [room_id]="room.key"></app-calendar>
                             <p (click)="calendar.downloadConflicts()" class="cancel-btn">
                                 Book
-                            </p>
+                            </p> -->
                         </td>
                     </tr>
                 </table>
@@ -57,7 +57,7 @@
         </td>
         <td *ngIf="!room || !room_type">
 
-            <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+            <!-- <mat-progress-spinner mode="indeterminate"></mat-progress-spinner> -->
         </td>
     </tr>
 </table>
