--- a/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.scss
+++ b/Client/Application/src/app/pages/guest/rooms/browse-rooms/browse-rooms.component.scss
@@ -31,4 +31,11 @@
     font-family: 'Roboto';
     font-weight: 500;
     color: black;
+    
+}
+
+hr {
+    background-color: #14274a;
+    width: 80%;
+    margin-bottom: 4%;
 }
