--- a/Client/Application/src/app/components/room/room-item/room-item.component.scss
+++ b/Client/Application/src/app/components/room/room-item/room-item.component.scss
@@ -1,73 +1,53 @@
-// .main {
-    
-//     width: 95%;
-//     padding-top: 12px;
-//     background-color: white;
 
+$primary-color: #14274A;
 
-// }
+.parent {
+    color: $primary-color;
+    display: block;
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    margin: 0 auto;
+    position: relative;
+    font-weight: 500;
+    text-align: center;
+}
 
-// .label {
+.header {
+    @extend .parent;
+    font-size: 20px;
+    margin-bottom: 2%;
+    text-transform: uppercase;
+}
 
-//     font-family: 'Abhaya Libre';
-//     font-style: normal;
-//     font-weight: 700;
-//     font-size: 1.5vw;
-//     line-height: 3vh;
+.body {
+    @extend .parent;
+    font-size: 13px;
+    margin-bottom: 2%;
+    margin-top: 2%;
+    width: 65%;
+}
 
-//     text-transform: uppercase;
-//     text-align: center;
+img {
+    box-sizing: border-box;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    transform: translateY(-17%);
+}
 
-//     color: #FFFFFF;
+.image-bg {
+    background-color: $primary-color;
+    block-size: fit-content;
+    height: fit-content;
+    margin-top: 12%;
+}
 
-// }
-
-// .footer {
-
-//     table-layout: fixed;
-//     width: 100%;
-//     margin-top: 16px;
-// }
-
-
-// .price {
-
-
-//     font-family: 'Abhaya Libre';
-//     font-style: normal;
-//     font-size: 2vw;
-//     line-height: 3.5vh;
-//     letter-spacing: 0.02em;
-//     color: #14274A;
-//     font-weight: 700;
-
-
-// }
-
-// td {
-//     text-align: center;
-// }
-
-// .check-btn {
-
-//     padding-top: 8px;
-//     padding-bottom: 8px;
-//     padding-left: 16px;
-//     padding-right: 16px;
-//     background: #14274A;
-//     font-family: 'Kulim Park';
-//     font-style: normal;
-//     font-weight: 200;
-//     font-size: 16px;
-//     line-height: 25px;
-
-//     text-transform: uppercase;
-
-//     letter-spacing: 0.07em;
-
-//     color: #FFFFFF;
-
-// }
+hr {
+    background-color: $primary-color;
+    width: 50%;
+    margin-bottom: 4%;
+}
 
 .main-img{
     width: 200%;
@@ -87,7 +67,7 @@
     padding: 10px;
     width: 175px;
     height: 50px;
-    background-color: #D6B389;
+    background-color: #FFFF;
 }
 
 .button-container {
@@ -101,4 +81,11 @@
     block-size: fit-content;
     height: fit-content;
     margin-top: 12%;
+}
+
+.price {
+    @extend .parent;
+    font-size: 15px;
+    margin-bottom: 2%;
+    text-transform: uppercase;
 }
