Finished the Support system🔧
1. N/A
2. 10
3. Finished the support system from both the Admin and guest side.

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -28,7 +28,7 @@
                 <button *ngIf="extractAnyPermission()" [routerLink]="['/admin']" class="check-btn">
                     {{ "admin_panel" | translate}}
                 </button>
-                <button class="check-btn">
+                <button (click)="openSupport()" class="check-btn">
                     {{ "support" | translate}}
                 </button>
             </td>
