Fixed quick availability🔧
1. N/A
2. 10
3. Fixed the quick availability component not working as intended. Fixed a visual like error.

--- a/Client/Website/src/app/components/room/quick-availability/quick-availability.component.html
+++ b/Client/Website/src/app/components/room/quick-availability/quick-availability.component.html
@@ -52,7 +52,7 @@
                         <mat-label class="selectors">{{ 'number_input' | translate }}</mat-label>
                         <mat-select [(ngModel)]="adults_value" matInput>
 
-                            <mat-option *ngFor="let capacity of adult_capacity">
+                            <mat-option *ngFor="let capacity of adult_capacity" [value]="capacity">
                                 {{capacity}}
                             </mat-option>
                         </mat-select>
@@ -62,9 +62,9 @@
                 <td>
                     <mat-form-field appearance="fill">
                         <mat-label class="selectors">{{ 'number_input' | translate }}</mat-label>
-                        <mat-select [(ngModel)]="adults_value" matInput>
+                        <mat-select [(ngModel)]="kids_value" matInput>
 
-                            <mat-option *ngFor="let capacity of kids_capacity">
+                            <mat-option *ngFor="let capacity of kids_capacity" [value]="capacity">
                                 {{capacity}}
                             </mat-option>
                         </mat-select>
